<resources>
    <string name="app_name">COVID-19 Helper</string>

    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="deaths">Deaths</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="max">Max</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
